# ohmycmd

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  ROADMAP.md
.agents/skills/plugin-development/: SKILL.md
.github/workflows/: build.yml
benchmarks/: dispatch_benchmark.cpp
config/: ohmycmd.cfg
docs/: benchmarks.md  config.md  dropin-verification.md  migration.md
include/: ohmycmd.inc  ohmycmd_compat.inc
scripts/: update-sdk.sh
src/: command_parser.cpp  command_parser.hpp  command_registry.cpp  command_registry.hpp  main.cpp
tests/: fuzz_parser.cpp  stress_registry.cpp  test_parser.cpp  test_registry.cpp
tests/fixtures/: dropin_filterscript.pwn  dropin_gamemode.pwn
tests/scripts/: verify_dropin.sh
tests/smoke/: ohmycmd_smoke.pwn
